WinEditLine's (formerly MinGWEditLine) ChangeLog
------------------------------------------------

*** December 5, 2021: release of WinEditLine 2.207 ***

  Changes with respect to the previous version include:
  - Added rl_library_version, rl_end, rl_readline_version
    from php branch (Thanks to Anatol Belski for the
    contribution)

*** January 6, 2020: release of WinEditLine 2.206 ***

  Changes with respect to the previous version include:
  - Added a missing "extern C" in readline.h

*** January 12, 2018: release of WinEditLine 2.205 ***

  Changes with respect to the previous version include:
  - Fixed https://bugs.php.net/bug.php?id=75775
    (Thanks to Anatol Belski for the report)

*** December 12, 2017: release of WinEditLine 2.204 ***

  Changes with respect to the previous version include:
  - install .pdb files when building in Debug mode with MSVC

*** November 20, 2017: release of WinEditLine 2.203 ***

  Changes with respect to the previous version include:
  - enable building with C89 standard
  - enable building with MT flag on MSVC

*** May 11, 2017: release of WinEditLine 2.202 ***

  Changes with respect to the previous version include:
  - fixed https://bugs.php.net/bug.php?id=74490
  - fixed https://bugs.php.net/bug.php?id=74489

*** November 17, 2016: release of WinEditLine 2.201 ***

  Changes with respect to the previous version include:
  - all CR, LF characters are now stripped when redirecting input
    from a file or pipe (thanks to Paolo Vergano for reporting this)
  - empty lines in redirected input do not cause readline() to
    return NULL, but "" as it should

*** November 13, 2016: release of WinEditLine 2.2 ***

  Changes with respect to the previous version include:

  - The length of lines is not limited to 4096 characters anymore
  - Text can now be piped into readline() or read from a file
    (thanks to Paolo Vergano and Anatol Belski for reporting this)
  - Implemented append_history() and history_truncate_file()