@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 2.8.12)
 project (WinEditLine)
 set (WinEditLine_VERSION_MAJOR 2)
 set (WinEditLine_VERSION_MINOR 2)
