@@ -5,7 +5,7 @@ libedit_test_dll.c
 is part of:
 
 WinEditLine (formerly MinGWEditLine)
-Copyright 2010-2021 Paolo Tosco <paolo.tosco.mail@gmail.com>
+Copyright 2010-2022 Paolo Tosco <paolo.tosco.mail@gmail.com>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -263,7 +263,7 @@ int main(int argc, char *argv[])
   char *line;
 
   printf("\nType exit to quit the test\n\n");
-  while ((line = DO_EDIT_read("prompt>"))
+  while ((line = DO_EDIT_read("\n\nprompt>"))
     && (strncmp(line, "exit", 4))) {
     printf("string='%s'\n", line);
     free(line);
